--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,12 +1,28 @@
 #shfDevelopmentBar {
-  background-color: #993300;
-  position: fixed;
-  right: 0px;
-  color: #ffffff;
-  /*width: 500px;*/
-  z-index: 2147483647;
-  padding: 3px;
-  border-radius: 0px 0px 0px 5px;
-  font-size: 0.8em;
-  text-shadow: 1px 1px 2px rgba(20, 20, 20, 1);
+    background-color: #993300;
+    position: fixed;
+    right: 0px;
+    color: #ffffff;
+    /*width: 500px;*/
+    z-index: 2147483647;
+    padding: 3px;
+    border-radius: 0px 0px 0px 5px;
+    font-size: 0.8em;
+    text-shadow: 1px 1px 2px rgba(20, 20, 20, 1);
+}
+.titulo {
+    color: #843534;
+}
+.page-header {
+    margin: 0px 0 20px;
+}
+
+.table > thead > tr > th, .table > tbody > tr > td{
+    text-align: center;
+}
+.tamano{
+    width: 40px;
+}
+.tamanoAccion{
+    width: 160px;
 }
