--- a/web/css/main.css
+++ b/web/css/main.css
@@ -11,7 +11,9 @@
   text-shadow: 1px 1px 2px rgba(20, 20, 20, 1);
   top: 0px;
 }
-
+/*body{
+    background-color: #c8e5bc;
+}*/
 .mvcPointer {
   cursor: pointer;
 }
