--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,4 @@
+
 .shfDevelopmentBar {
   background-color: rgb(61,35,0);
   position: fixed;
@@ -11,9 +12,10 @@
   text-shadow: 1px 1px 2px rgba(20, 20, 20, 1);
   top: 0px;
 }
-/*body{
-    background-color: #c8e5bc;
-}*/
+body{
+    background-color: #F0F2F3;
+    background-image: url('../img/pattern3.png');
+}
 .mvcPointer {
   cursor: pointer;
 }
