Mejoramiento en parte Visual

--- a/web/css/signin.css
+++ b/web/css/signin.css
@@ -52,3 +52,8 @@ body {
   margin-top: 15px;
   margin-bottom: 0px;
 }
+.btn-primary {
+  color: #fff;
+  background-color: #67b168;
+  border-color: #000;
+}
