--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -6335,6 +6335,10 @@ button.close {
 .nav_bar{
     background-color: #d6e9c6;
 }
+.nav_title{
+    background-color: #337ab7;
+    
+}
 .tables{
     background-color: #ffffff; 
 }
