Implementacion de Actualizacion del Framework en su Rama Principal.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -11,7 +11,7 @@
   position: fixed;
   right: 0px;
   color: #ffffff;
-  width: 500px;
+  /*width: 500px;*/
   z-index: 2147483647;
   padding: 3px 3px 3px 5px;
   border-radius: 0px 0px 0px 5px;
