--- a/web/css/signin.css
+++ b/web/css/signin.css
@@ -2,7 +2,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
-  background-image: url('../img/login.jpg');
+  background-image: url('../img/fondo.jpg');
 }
 
 .form-signin {
